dept file modified

--- a/dept.html
+++ b/dept.html
@@ -12,7 +12,11 @@
   </tr>
   <tr>
    
-
+  <tr>
+    <td>20</td>
+    <td>admin</td>
+    <td>tvm</td>
+  </tr>
   <tr>
     <td>30</td>
     <td>sales</td>
